# us-stock-recommender

./: .env.example  .gitignore  Dockerfile  EMPTY_SEARCH_UPDATE.md  LICENSE  MANIFEST.in  PORTFOLIO_WEB_GUIDE.md  Procfile  README.md  README.zh.md  build.sh  demo_automated_trading.py  demo_portfolio.py  demo_simulation.py  portfolio_app.py  pyproject.toml  requirements.txt  run_ci_tests.sh  setup.cfg  start_local.sh  start_safari.sh  stock_recommender.py  test_500_stocks.txt  test_alpha_vantage.py  test_dynamic_stock.py  test_empty_search.py  test_error_handling.txt  test_formatting_fix.py  test_stocks.txt
.github/: copilot-instructions.md
.github/workflows/: README.md  README.zh.md  ci.yml  publish-to-pypi.yml  publish-to-testpypi.yml  release.yml  test-build.yml
.streamlit/: config.toml  config_safari.toml
docs/: PYPI_PUBLISHING_GUIDE.md  README.md  RELEASE_CHECKLIST.md  SIMULATION_README.md  SIMULATION_SYSTEM_SPEC.md  STRATEGY_ANALYSIS.md  STRATEGY_ANALYSIS_EN.md  STRATEGY_QUICK_REFERENCE.md  STREAMLIT_UI_SPEC.md
languages/: en.py  zh.py
scripts/: prepare_release.sh
src/analyzers/: stock_analyzer.py
src/batch/: __init__.py  batch_analyzer.py  concurrent_manager.py  input_parser.py  progress_tracker.py  sample_stocks.csv  sample_stocks.txt
src/engines/: recommendation_engine.py  strategy_manager.py
src/languages/: __init__.py  config.py  en.py  zh.py
src/portfolio/: __init__.py  analyzer.py  exceptions.py  file_manager.py  manager.py  models.py
src/simulation/: __init__.py  account_manager.py  automated_trader.py  backtest_engine.py  models.py  trader.py  web_integration.py
src/strategies/: aiml_strategy.py  base_strategy.py  quantitative_strategy.py  technical_strategy.py
src/utils/: formatters.py  stock_info_manager.py  stock_selector.py  symbol_config.py
tests/: run_tests.py  test_engines.py  test_input_parser.py  test_integration.py  test_language_config.py  test_multi_stock_integration.py  test_stock_analyzer.py  test_strategies.py  test_utils.py
